[project]
name = "hatchet-mcp"
version = "0.1.0"
description = "MCP server for debugging and monitoring Hatchet jobs"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "mcp>=1.0.0",
    "hatchet-sdk>=1.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hatchet_mcp"]
